# sears-home-services-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  wrangler.app.toml  wrangler.uptime.toml  wrangler.web.toml
alembic/: env.py
alembic/versions/: 0001_core_initial.py  0002_scheduling.py  0003_visual_image_uploads.py  0004_merge_merge_scheduling_and_visual_heads.py  0005_call_sid.py
app/: contracts.py  latency_probe.py  main.py  obs.py
app/agent/: core.py  fillers.py  instrumentation.py  (+9 more)
cloudflare/: app-worker.ts  package-lock.json  package.json  tsconfig.json  uptime-worker.ts  web-worker.ts
docs/: SUBMISSION.md  demo-script.md  local-twilio-run.md  technical-design.md  twilio-webhook-setup.md
evals/: README.md  adapter.py  adaptive_driver.py  assertions.py  conftest.py  fixture_loader.py  gating.py  live_driver.py  metrics.py  test_canaries.py  test_conversations.py  test_e2e_hermetic_greeting.py  test_e2e_live_booking.py  test_e2e_live_latency.py  test_e2e_live_personas.py  test_library_live.py  test_library_retrieval.py  test_voice_conversations.py  thresholds.py  voice_fixture_lens.py
scripts/: appointment_requirements_bench.py  booking_quality_bench.py  call_audio_report.py  fresh_clone_smoke.sh  ingest_library.py  latency_bench.py  latency_compare.py  latency_pipecat.py  stutter_bench.py  transcript_runner.py  twilio_debug.py
tests/: conftest.py  fakes.py  test_adapter.py  test_adaptive_driver_hermetic.py  test_agent_core.py  test_agent_email_integration.py  test_agent_trace.py  test_agent_tts_fallback.py  test_alembic_migrations.py  test_app_http_surface.py  test_appliance_inference.py  test_appointment_requirements_bench.py  test_assertions.py  test_booking_bench_harness.py  test_booking_quality_policy.py  test_budget_invariants_and_startup.py  test_call_audio_report.py  test_compose_config.py  test_contracts_shape.py  test_core_tools.py  test_db_url.py  test_email_smtp_backend.py  test_eval_gate_split.py  test_fillers.py  test_fixture_shapes.py  test_gating.py  test_harness_fixtures.py  test_ingest_library.py  test_instrumentation.py  test_instrumentation_branches.py  test_knowledge.py  test_knowledge_loader_negative.py  test_latency_bench.py  test_latency_compare.py  test_latency_compare_budget_label.py  test_latency_pipecat.py  test_latency_probe.py  test_library_flag.py  test_library_tools.py  test_live_driver.py  (+41 more)
web/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
(+337 files in other folders)
