[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sears-home-services-agent"
version = "0.1.0"
description = "Inbound-call voice AI agent for Sears Home Services (spec-first take-home)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "llama-index-core",
    "llama-index-llms-openai",
    "llama-index-llms-deepseek",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "openai",
    "pydantic",
    "pyyaml",
    "httpx",
    "aiosmtplib",
    "twilio",
    "python-multipart",
    "llama-index-vector-stores-qdrant",
    "llama-index-readers-file",
    "fastembed",
    # Pipecat voice pipeline (the phone channel; app/voice) — Twilio Media Streams
    # transport → Deepgram STT (default) → OpenAI LLM → Cartesia TTS (default), with Silero
    # VAD. openai/cartesia/deepgram are all swappable per-role via *_PROVIDER (see README).
    # The `cartesia` extra pulls in no additional packages today — included for
    # documentation, not function (CartesiaTTSService/CartesiaSTTService only need
    # websockets/aiohttp/pydantic, already core pipecat-ai deps).
    "pipecat-ai[cartesia,deepgram,openai,silero,websocket]",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "deepeval",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
